update kitty configs

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,7 +1,7 @@
 # vim:fileencoding=utf-8:ft=conf:foldmethod=marker
 
 # include colorscheme
-include colors.conf
+include colors-monochrome.conf
 
 #: Fonts {{{
 
@@ -27,7 +27,7 @@ bold_italic_font auto
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 15.0
+font_size 13.0
 
 #: Font size (in pts)
 
@@ -559,7 +559,7 @@ window_margin_width 10.0
 
 #: The foreground and background colors
 
-background_opacity 1.0
+background_opacity 0.7
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
