--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -32,8 +32,8 @@ print_info() {
 #    info " ​ ​  󰅐 " uptime
 #    info " ​ ​   " gpu_driver  # Linux/macOS only
 #    info " ​ ​  " cpu_usage
-    info " ​ ​ ﱘ " song
-#     [[ "$player" ]] && prin "Music Player" "$player"
+#    info " ​ ​ ﱘ " song
+    # [[ "$player" ]] && prin "Music Player" "$player"
 #    info " ​ ​   " local_ip
 #    info " ​ ​   " public_ip
 #    info " ​ ​   " locale  # This only works on glibc systems.
