--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -2,7 +2,7 @@
 
 #-- Variables ------------------------------------------------------------
 $wallpaper=~/Cloud/Personal/Images/Wallpapers/Monochrome/wallhaven-1kj9o3.jpg
-$term=kitty -c=$HOME/.config/hypr/kitty/kitty.conf
+$term=kitty
 $floating_term=alacritty
 $editor=code
 $notetaker=logseq
