update hyprland config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -155,6 +155,7 @@ windowrule=float,blueman-manager
 windowrule=float,title:^(Nextcloud)$
 windowrule=float,solaar
 windowrule=float,NVIM
+windowrule=float,org.kde.gwenview
 
 windowrule=size 1000 800,wdisplays
 windowrule=size 1440 720,mpv
@@ -191,6 +192,7 @@ windowrule=noblur,StardewModdingAPI
 windowrule=opaque,StardewModdingAPI
 windowrule=opaque,sysupdate
 windowrule=opaque,NVIM
+windowrule=opaque,title:^(.*NVIM)$
 
 #-- App Bindings ---------------------------------------------------------
 bind=SUPER,Return,exec,$term
