--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,7 +1,6 @@
 #-- Hyprland configuration file. --#
 
 #-- Variables ------------------------------------------------------------
-$wallpaper=~/Cloud/Personal/Images/Wallpapers/Monochrome/wallhaven-1kj9o3.jpg
 $term=kitty
 $floating_term=alacritty
 $editor=code
@@ -11,7 +10,6 @@ $browser=firefox
 $filemanager=dolphin
 $calendar=calendar
 $videcon=XDG_SESSION_TYPE=x11 flatpak run us.zoom.Zoom
-#$locker=swaylock -f -e -l -L -s fill -i $wallpaper
 #$suspend_and_lock=swaylock -f -e -l -L -s fill -i $wallpaper && sleep 2 && systemctl suspend
 $discord=flatpak run com.discordapp.Discord
 $discord_overlay=flatpak run io.github.trigg.discover_overlay
@@ -20,26 +18,7 @@ $office=flatpak run org.libreoffice.Libreoffice
 $nextcloud=nextcloud # flatpak run com.nextcloud.desktopclient.nextcloud
 $steam=steam
 $librewolf=flatpak run io.gitlab.librewolf-community
-$lock=swaylock -fet --layout-text-color #FFFFFF \
-                                            --font-size 15 \
-                                            --layout-text-color 000000
-
-#swaylock \                                          22:36:38
-#        --screenshots \
-#        --clock \
-#        --indicator \
-#        --indicator-radius 100 \
-#        --indicator-thickness 7 \
-#        --effect-blur 7x5 \
-#        --effect-vignette 0.5:0.5 \
-#        --ring-color bb00cc \
-#        --key-hl-color FFFFFFFF \
-#        --line-color 00000000 \
-#        --inside-color 00000088 \
-#        --separator-color 00000000 \
-#        --grace 2 \
-#        --fade-in 0.2
-
+$lock=~/.config/hypr/scripts/swayLocker
 
 #-- Outout ---------------------------------------------------------------
 monitor=HDMI-A-1,1920x1080@60,0x0,1
@@ -212,7 +191,7 @@ bind=SUPER,F8,exec,$calendar
 
 # Exitting and Locking
 bind=SUPER,E,exec,wlogout -p layer-shell
-bind=SUPERSHIFT,E,exec,pkill Hyprland > /dev/null
+bind=SUPERSHIFT,E,exec,pkill Hyprland
 bind=SUPERSHIFT,L,exec,$lock
 
 bind=SUPER,escape,exec,hyprctl reload ; notify-send "Hyprland reloaded" || notify-send "Reload failed!"
@@ -246,7 +225,7 @@ bind=SUPER,C,changegroupactive,
 bind=SUPER,R,togglesplit,
 bind=SUPER,P,pseudo,
 bind=SUPER,F,fullscreen,
-bind=SUPER,L,exec,swaylock -f -e -l -L -s fill -i $wallpaper
+bind=SUPER,L,exec,$lock_effects #swaylock -f -e -l -L -s fill -i $wallpaper
 bind=SUPER,X,exec,farge --notify
 bind=SUPER,O,toggleopaque
 bind=SUPERSHIFT,Q,killactive,
