--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -225,7 +225,6 @@ bind=SUPER,C,changegroupactive,
 bind=SUPER,R,togglesplit,
 bind=SUPER,P,pseudo,
 bind=SUPER,F,fullscreen,
-bind=SUPER,L,exec,$lock_effects #swaylock -f -e -l -L -s fill -i $wallpaper
 bind=SUPER,X,exec,farge --notify
 bind=SUPER,O,toggleopaque
 bind=SUPERSHIFT,Q,killactive,
@@ -334,16 +333,6 @@ windowrule=workspace 12 silent,com.nextcloud.desktopclient.nextcloud
 #movecursortocorner,3
 
 #-- Startup --------------------------------------------------------------
-#exec-once=sleep 4 && dbus-update-activation-environment --systemd DBUS_SESSION_BUS_ADDRESS DISPLAY XAUTHORITY
-#exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-#exec-once=$HOME/.config/hypr/scripts/hyprinit
-#exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-
-# xdg-desktop-portal-wlr is picky
-#exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # DISPLAY DBUS_SESSION_BUS_ADDRESS XAUTHORITY
-#exec-once=dbus-update-activation-environment 2>/dev/null && \
-#          dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # DISPLAY
-
 exec-once=dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=killall xdg-desktop-portal xdg-desktop-portal-wlr && /usr/lib/xdg-desktop-portal & /usr/lib/xdg-desktop-portal-wlr
 
@@ -376,6 +365,12 @@ exec-once=$discord
 exec-once=$nextcloud
 exec-once=$steam
 exec-once=$discord_overlay
+exec-once=swayidle -w \\
+	         timeout 300 $locker \\
+	         timeout 600 hyprctl dispatch dpms off \\
+		         resume hyprctl dispatch dpms on \\
+	         before-sleep $locker
+
 #exec-once=wl-clipboard-history -t
 #exec-once="kanshi -c $HOME/.config/hypr/kanshi/config"
 
