new locking & idle

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -42,11 +42,11 @@ general {
     sensitivity=1.0
     main_mod=SUPER
 
-    gaps_in=14 #8
-    gaps_out=20 #10
+    gaps_in=10 #8
+    gaps_out=16 #10
     border_size=3
-    col.active_border=0xffffff
-    col.active_border=0x000000
+    col.active_border=0x00000000
+    col.active_border=0x00ffffff
     #col.inactive_border=0x88aaaaaa
 
     # experimental, monitor is 100% fine, but full might have some minor bugs, especially with high blur settings!
@@ -333,8 +333,11 @@ windowrule=workspace 12 silent,com.nextcloud.desktopclient.nextcloud
 #movecursortocorner,3
 
 #-- Startup --------------------------------------------------------------
+
+# Screensharing, please?
 exec-once=dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once=killall xdg-desktop-portal xdg-desktop-portal-wlr && /usr/lib/xdg-desktop-portal & /usr/lib/xdg-desktop-portal-wlr
+exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+#exec-once=killall xdg-desktop-portal xdg-desktop-portal-wlr && /usr/lib/xdg-desktop-portal & /usr/lib/xdg-desktop-portal-wlr
 
 # polkit & keyring daemon
 exec-once=/usr/lib/xfce-polkit/xfce-polkit
@@ -365,11 +368,9 @@ exec-once=$discord
 exec-once=$nextcloud
 exec-once=$steam
 exec-once=$discord_overlay
-exec-once=swayidle -w \\
-	         timeout 300 $locker \\
-	         timeout 600 hyprctl dispatch dpms off \\
-		         resume hyprctl dispatch dpms on \\
-	         before-sleep $locker
+
+# idle lock
+exec-once = swayidle -w timeout 600 '~/.config/hypr/scripts/swayIdleLocker &' timeout 900 'hyprctl dispatch dpms off'
 
 #exec-once=wl-clipboard-history -t
 #exec-once="kanshi -c $HOME/.config/hypr/kanshi/config"
