--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -57,6 +57,7 @@ general {
 misc {
    disable_hyprland_logo=1 # disable the logo in the background
    disable_splash_rendering=1 # disable splash texts below the logo
+   mouse_move_enables_dpms=true # 
 }
 
 #-- Decorations ----------------------------------------------------------
@@ -370,7 +371,11 @@ exec-once=$steam
 exec-once=$discord_overlay
 
 # idle lock
-exec-once = swayidle -w timeout 600 '~/.config/hypr/scripts/swayIdleLocker &' timeout 900 'hyprctl dispatch dpms off'
+exec-once=swayidle -w \
+                  timeout 300 '~/.config/hypr/scripts/swayIdleLocker &' \
+                  timeout 420 'hyprctl dispatch dpms off' \
+			  resume 'hyprctl dispatch dpms on' \
+                  before-sleep '~/.config/hypr/scripts/swayLocker &'
 
 #exec-once=wl-clipboard-history -t
 #exec-once="kanshi -c $HOME/.config/hypr/kanshi/config"
