swappy & fix some keybinds

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -196,7 +196,6 @@ bind=SUPERSHIFT,E,exec,pkill Hyprland
 bind=SUPERSHIFT,L,exec,$lock
 
 bind=SUPER,escape,exec,hyprctl reload ; notify-send "Hyprland reloaded" || notify-send "Reload failed!"
-#bind=SUPERSHIFT,L,exec,swaylock -f -e -l -L -s fill -i $wallpaper; sleep 1; systemctl suspend -i
 
 #-- Media Keys -----------------------------------------------------------
 bind=SUPERALT,space,exec,playerctl play-pause
@@ -212,12 +211,15 @@ bind=,XF86AudioPlay,exec,playerctl play-pause
 bind=,XF86AudioNext,exec,playerctl next
 bind=,XF86AudioPrev,exec,playerctl previous
 
-bind=,print,exec,grim -c -g "$(slurp)" - | wl-copy -t image/png && notify-send "Screenshot copied to clipboard!"
-bind=SUPER,print,exec,grim ~/Pictures/screenshot_$(date +%Y%m%d_%H%M%S).png && notify-send "Screenshot saved"
-bind=SUPERSHIFT,print,exec,notify-send "Recording started" ; mwf-recorder -g "$(slurp)" -f ~/Movies/recording-"$(date +%d/%m/%h (%T))".mp4 || notify-send "Recording failed!"
-bind=SUPERSHIFT,R,exec,~/.config/hypr/scripts/screenrecord.sh wl
-bind=SUPERALT,R,exec,~/.config/hypr/scripts/screenrecord.sh wlsw
-bind=SUPERCTRL,R,exec,~/.config/hypr/scripts/screenrecord.sh kill
+bind=,Print,exec,grim -g "$(slurp)" - | wl-copy -t image/png && notify-send "Screenshot copied to clipboard!"
+#bind=SUPER,Print,exec,grim - | wl-copy && notify-send 'Screenshot Copied to Clipboard'
+bind=SUPER,Print,exec,grim -g "$(slurp)" - | swappy -f -
+
+#bind=SUPER,print,exec,grim ~/Pictures/screenshot_$(date +%Y%m%d_%H%M%S).png && notify-send "Screenshot saved"
+#bind=SUPERSHIFT,print,exec,notify-send "Recording started" ; mwf-recorder -g "$(slurp)" -f ~/Movies/recording-"$(date +%d/%m/%h (%T))".mp4 || notify-send "Recording failed!"
+#bind=SUPERSHIFT,R,exec,~/.config/hypr/scripts/screenrecord.sh wl
+#bind=SUPERALT,R,exec,~/.config/hypr/scripts/screenrecord.sh wlsw
+#bind=SUPERCTRL,R,exec,~/.config/hypr/scripts/screenrecord.sh kill
 
 #-- General Window Operations --------------------------------------------
 bind=SUPER,space,togglefloating,
