--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -19,8 +19,9 @@ $nextcloud=nextcloud # flatpak run com.nextcloud.desktopclient.nextcloud
 $steam=steam
 $librewolf=flatpak run io.gitlab.librewolf-community
 $lock=~/.config/hypr/scripts/swayLocker
+$idlelock=~/.config/hypr/scripts/swayIdleLocker
 
-#-- Outout ---------------------------------------------------------------
+#-- Output ---------------------------------------------------------------
 monitor=HDMI-A-1,1920x1080@60,0x0,1
 
 #-- Configuration --------------------------------------------------------
@@ -174,6 +175,8 @@ windowrule=opaque,sysupdate
 windowrule=opaque,NVIM
 windowrule=opaque,title:^(.*NVIM)$
 
+windowrule=pin,title:^(Picture\-in\-Picture)$
+
 #-- App Bindings ---------------------------------------------------------
 bind=SUPER,Return,exec,$term
 bind=SUPERSHIFT,return,exec,$floating_term
@@ -194,6 +197,7 @@ bind=SUPER,F8,exec,$calendar
 bind=SUPER,E,exec,wlogout -p layer-shell
 bind=SUPERSHIFT,E,exec,pkill Hyprland
 bind=SUPERSHIFT,L,exec,$lock
+bind=SUPER,L,exec,$idlelock
 
 bind=SUPER,escape,exec,hyprctl reload ; notify-send "Hyprland reloaded" || notify-send "Reload failed!"
 
@@ -340,10 +344,10 @@ windowrule=workspace 12 silent,com.nextcloud.desktopclient.nextcloud
 # Screensharing, please?
 exec-once=dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-#exec-once=killall xdg-desktop-portal xdg-desktop-portal-wlr && /usr/lib/xdg-desktop-portal & /usr/lib/xdg-desktop-portal-wlr
 
 # polkit & keyring daemon
-exec-once=/usr/lib/xfce-polkit/xfce-polkit
+#exec-once=/usr/lib/xfce-polkit/xfce-polkit
+exec-once=/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once=gnome-keyring-daemon --start
 
 # background services
@@ -352,6 +356,7 @@ exec-once="wpaperd"
 exec-once="swaync"
 exec-once="waybar"
 exec-once="gammastep"
+exec-once="thunderbird --headless"
 
 # waybar tray applications
 exec-once=nm-applet --indicator
@@ -379,6 +384,7 @@ exec-once=swayidle -w \
 			  resume 'hyprctl dispatch dpms on' \
                   before-sleep '~/.config/hypr/scripts/swayLocker &'
 
+# unused
 #exec-once=wl-clipboard-history -t
 #exec-once="kanshi -c $HOME/.config/hypr/kanshi/config"
 
