--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -46,8 +46,8 @@ general {
     gaps_in=10 #8
     gaps_out=16 #10
     border_size=3
-    col.active_border=0x00000000
-    col.active_border=0x00ffffff
+    col.active_border=0x30ffffff
+    col.inactive_border=0x30000000
     #col.inactive_border=0x88aaaaaa
 
     # experimental, monitor is 100% fine, but full might have some minor bugs, especially with high blur settings!
@@ -64,7 +64,7 @@ misc {
 #-- Decorations ----------------------------------------------------------
 decoration {
     rounding=10
-    blur=0
+    blur=7
     blur_size=8 # minimum 1
     blur_passes=1 # minimum 1, more passes = more resource intensive.
     # Your blur "amount" is blur_size * blur_passes, but high blur_size (over around 5-ish) will produce artifacts.
@@ -77,7 +77,7 @@ animations {
 
     animation=windows,1,3,default
     animation=fadeIn,1,3,default
-    animation=workspaces,1,3,default,slide #slide
+    animation=workspaces,1,3,default,slide
     animation=border,1,3,default
 
     #bezier=my_curve,0.85, 0, 0.15, 1
@@ -174,6 +174,7 @@ windowrule=opaque,StardewModdingAPI
 windowrule=opaque,sysupdate
 windowrule=opaque,NVIM
 windowrule=opaque,title:^(.*NVIM)$
+windowrule=opaque,gamescope
 
 windowrule=pin,title:^(Picture\-in\-Picture)$
 
