--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -212,8 +212,8 @@ bind=SUPERALT,bracketleft,exec,playerctl previous
 #binde=,XF86AudioRaiseVolume,exec,pactl set-sink-volume @DEFAULT_SINK@ +5%
 #binde=,XF86AudioLowerVolume,exec,pactl set-sink-volume @DEFAULT_SINK@ -5%
 
-binde=,XF86AudioRaiseVolume,exec,wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+ && wpctl get-volume @DEFAULT_AUDIO_SINK@ | ~/Dev/test.sh > $wobpipe
-binde=,XF86AudioLowerVolume,exec,wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- && wpctl get-volume @DEFAULT_AUDIO_SINK@ | ~/Dev/test.sh > $wobpipe
+binde=,XF86AudioRaiseVolume,exec,wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+ && wpctl get-volume @DEFAULT_AUDIO_SINK@ | ~/.config/hypr/scripts/wobFormat > $wobpipe
+binde=,XF86AudioLowerVolume,exec,wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- && wpctl get-volume @DEFAULT_AUDIO_SINK@ | ~/.config/hypr/scripts/wobFormat > $wobpipe
 
 bind=,XF86AudioMute,exec,pactl set-sink-mute @DEFAULT_SINK@ toggle
 bind=,XF86AudioMicMute,exec,pactl set-source-mute @DEFAULT_SOURCE@ toggle
