--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,26 @@
 *
-README.md
-!.config/sway*/*
-!.config/zsh/.zshrc
-!.config/zsh/aliases
-!.config/zsh/xdg
-!.config/alacritty/*
-!.config/beets/config.yaml
-!.config/bspwm/*
-!.config/eww/*
-!.config/kanshi/*
-!.config/kitty/*
-!.config/mako/*
-!.config/micro/*
-!.config/neofetch/*
-!.config/nvim/*
-!.config/polybar/*
-!.config/rofi/*
-!.config/sxhkd/*
-!.config/waybar/*
-!.config/wlogout/*
-!.config/wofi/*
-!.config/wpaperd/*
-!.config/mimeapps.list
+!README.md
+!.cache
+!/home/notashelf/
+!*/.config/sway*/*
+!*/.config/zsh/.zshrc
+!*/.config/zsh/aliases
+!*/.config/zsh/xdg
+!*/.config/alacritty/*
+!*/.config/beets/config.yaml
+!*/.config/bspwm/*
+!*/.config/eww/*
+!*/.config/kanshi/*
+!*/.config/kitty/*
+!*/.config/mako/*
+!*/.config/micro/*
+!*/.config/neofetch/*
+!*/.config/nvim/*
+!*/.config/polybar/*
+!*/.config/rofi/*
+!*/.config/sxhkd/*
+!*/.config/waybar/*
+!*/.config/wlogout/*
+!*/.config/wofi/*
+!*/.config/wpaperd/*
+!*/.config/mimeapps.list
