hyprland update & package installer script

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -11,7 +11,7 @@ $filemanager=dolphin
 $calendar=calendar
 $videcon=XDG_SESSION_TYPE=x11 flatpak run us.zoom.Zoom
 #$suspend_and_lock=swaylock -f -e -l -L -s fill -i $wallpaper && sleep 2 && systemctl suspend
-$discord=flatpak run com.discordapp.Discord
+$discord=discord-canary #flatpak run com.discordapp.Discord
 $discord_overlay=flatpak run io.github.trigg.discover_overlay
 $spotify=flatpak run com.spotify.Client
 $office=flatpak run org.libreoffice.Libreoffice
@@ -42,7 +42,6 @@ input {
 
 general {
     sensitivity=1.0
-    main_mod=SUPER
 
     gaps_in=10 #8
     gaps_out=16 #10
@@ -65,7 +64,7 @@ misc {
 #-- Decorations ----------------------------------------------------------
 decoration {
     rounding=10
-    blur=7
+    blur=8
     blur_size=8 # minimum 1
     blur_passes=1 # minimum 1, more passes = more resource intensive.
     # Your blur "amount" is blur_size * blur_passes, but high blur_size (over around 5-ish) will produce artifacts.
@@ -247,6 +246,9 @@ bind=SUPERSHIFT,Q,killactive,
 #bind=,XF86Display,exec,wdisplays
 
 #-- Window Focus & Moves -------------------------------------------------
+bindm=SUPER,mouse:272,movewindow
+bindm=SUPER,mouse:273,resizewindow
+
 bind=ALT,left,movefocus,l
 bind=ALT,right,movefocus,r
 bind=ALT,up,movefocus,u
@@ -273,8 +275,8 @@ bind=SUPER,backspace,workspace,12
 bind=SUPER,right,workspace,m+1
 bind=SUPER,left,workspace,m-1
 
-bind=SUPER,mouse:276,workspace,m+1
-bind=SUPER,mouse:275,workspace,m-1
+bindm=SUPER,mouse:276,workspace,m+1
+bindm=SUPER,mouse:275,workspace,m-1
 
 #-- Focus Monitors -------------------------------------------------------
 bind=SUPERSHIFT,up,focusmonitor,u
@@ -365,7 +367,7 @@ exec-once="wpaperd"
 exec-once="swaync"
 exec-once="waybar"
 exec-once="gammastep"
-exec-once=thunderbird --headless
+exec-once=thunderbird
 exec-once=rm -f $wobpipe && mkfifo $wobpipe && tail -f $wobpipe | wob
 
 # waybar tray applications
