--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -19,8 +19,8 @@ $nextcloud=nextcloud # flatpak run com.nextcloud.desktopclient.nextcloud
 $steam=steam
 $librewolf=flatpak run io.gitlab.librewolf-community
 $wobpipe=/tmp/wobpipe
-$lock=~/.config/hypr/scripts/swayLocker
-$idlelock=~/.config/hypr/scripts/swayIdleLocker
+$lock=playerctl --player=spotify,firefox -a pause && ~/.config/hypr/scripts/swayLocker
+$idlelock=playerctl --player=spotify,firefox -a pause~/.config/hypr/scripts/swayIdleLocker
 
 #-- Output ---------------------------------------------------------------
 monitor=HDMI-A-1,1920x1080@60,0x0,1
@@ -58,7 +58,7 @@ general {
 misc {
    disable_hyprland_logo=1 # disable the logo in the background
    disable_splash_rendering=1 # disable splash texts below the logo
-   mouse_move_enables_dpms=true # 
+   mouse_move_enables_dpms=true # alternative dpms off method 
 }
 
 #-- Decorations ----------------------------------------------------------
