un-abuse hyprland config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,4 +1,4 @@
-#-- Hyprland configuration file. --#
+-- Hyprland configuration file. --#
 
 #-- Variables ------------------------------------------------------------
 $term=kitty
@@ -58,6 +58,9 @@ misc {
    disable_hyprland_logo=1 # disable the logo in the background
    disable_splash_rendering=1 # disable splash texts below the logo
    mouse_move_enables_dpms=true # alternative dpms off method 
+   enable_swallow=true
+   layers_hog_keyboard_focus=true
+   swallow_regex=^(kitty)$
 }
 
 #-- Decorations ----------------------------------------------------------
@@ -243,7 +246,7 @@ bind=SUPER,R,togglesplit,
 bind=SUPER,P,pseudo,
 bind=SUPER,F,fullscreen,
 bind=SUPER,X,exec,farge --notify
-bind=SUPER,O,toggleopaque
+bind=SUPER,O,toggleopaque,
 bind=SUPERSHIFT,Q,killactive,
 #bind=,XF86Display,exec,wdisplays
 
@@ -277,8 +280,10 @@ bind=SUPER,backspace,workspace,12
 bind=SUPER,right,workspace,m+1
 bind=SUPER,left,workspace,m-1
 
-bindm=SUPER,mouse:276,workspace,m+1
-bindm=SUPER,mouse:275,workspace,m-1
+#bindm=SUPER,mouse:276,workspace,m+1
+#bindm=SUPER,mouse:275,workspace,m-1
+bind=SUPER,mouse:276,workspace,m+1
+bind=SUPER,mouse:275,workspace,m-1
 
 #-- Focus Monitors -------------------------------------------------------
 bind=SUPERSHIFT,up,focusmonitor,u
