remove eww, organize zsh

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,4 +1,4 @@
--- Hyprland configuration file. --#
+#-- Hyprland configuration file. --#
 
 #-- Variables ------------------------------------------------------------
 $term=kitty
@@ -9,14 +9,14 @@ $mailer=thunderbird
 $browser=firefox
 $filemanager=dolphin
 $calendar=kalendar
-$videcon=XDG_SESSION_TYPE=x11 flatpak run us.zoom.Zoom
-$discord=discord-canary #flatpak run com.discordapp.Discord
-$discord_overlay=flatpak run io.github.trigg.discover_overlay
-$spotify=flatpak run com.spotify.Client
-$office=flatpak run org.libreoffice.Libreoffice
-$nextcloud=nextcloud # flatpak run com.nextcloud.desktopclient.nextcloud
+$videcon=XDG_SESSION_TYPE=x11 zoom
+$discord=discord-canary 
+$discord_overlay=discord_overlay
+$spotify=spotify
+$office=libreoffice
+$nextcloud=nextcloud
 $steam=steam-native
-$librewolf=flatpak run io.gitlab.librewolf-community
+$librewolf=librewolf
 $wobpipe=/tmp/wobpipe
 $xobpipe=/tmp/xobpipe
 $lock=playerctl --player=spotify,firefox -a pause ; ~/.config/hypr/scripts/swayLocker
@@ -25,7 +25,7 @@ $torrent=qbittorrent
 
 #-- Output ---------------------------------------------------------------
 monitor=HDMI-A-1,1920x1080@60,0x0,1
-
+monitor=DP-1,1920x1080@60,0x0,1
 #-- Configuration --------------------------------------------------------
 input {
     kb_layout=tr
@@ -44,12 +44,13 @@ input {
 general {
     sensitivity=1.0
 
-    gaps_in=6 #8
+    gaps_in=4 #8
     gaps_out=8 #10
+
     border_size=3
     col.active_border=0x30ffffff
     col.inactive_border=0x30000000
-    #col.inactive_border=0x88aaaaaa
+
     damage_tracking=full
 
 }
@@ -63,7 +64,6 @@ misc {
    swallow_regex=^(kitty)$
 }
 
-#-- Decorations ----------------------------------------------------------
 decoration {
     rounding=15
     multisample_edges=1
