add windowrule for qbittorrent

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -342,17 +342,18 @@ bind=ALT,TAB,workspace,previous
 windowrule=workspace 1 silent,firefox
 windowrule=workspace 2 silent,dolphin
 windowrule=workspace 3 silent,^(discord)$
-windowrule=workspace 3 silent,^(Discord Updater)$
+windowrule=workspace 3 silent,title:^(Discord Updater)$
 windowrule=workspace 4 silent,^(spotify)$
 windowrule=workspace 5 silent,libreoffice
 windowrule=workspace 6 silent,thunderbird
-windowrule=workspace 7 silent,zoom
-windowrule=workspace 8 silent,kalendar
+windowrule=workspace 6 silent,kalendar
+windowrule=workspace 7 silent,^(zoom)$
+windowrule=workspace 8 silent,^(gamescope)$
 windowrule=workspace 9 silent,^(Steam)$
 windowrule=workspace 9 silent,title:^(Steam)$
 windowrule=workspace 9 silent,title:^(Friends List)$
 windowrule=workspace 10 silent,krita
-windowrule=workspace 11 silent,^(gamescope)$
+windowrule=workspace 11 silent,^(qbittorrent)$
 windowrule=workspace 12 silent,title:^(Nextcloud)$
 windowrule=workspace 12 silent,com.nextcloud.desktopclient.nextcloud
 #movecursortocorner,3
@@ -364,13 +365,13 @@ exec-once=dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY X
 exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 # polkit & keyring daemon
-#exec-once=/usr/lib/xfce-polkit/xfce-polkit
 exec-once=/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once=gnome-keyring-daemon --start
 
 # background services
 exec-once=akonadictl start
-exec-once="wpaperd"
+exec-once="swww init"
+exec-once="swww img ~/Pictures/Wallpapers/Monochrome/..." # TODO: add a script
 exec-once="swaync"
 exec-once="waybar"
 exec-once="gammastep"
