experimental swww script w/ TODO

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -370,8 +370,7 @@ exec-once=gnome-keyring-daemon --start
 
 # background services
 exec-once=akonadictl start
-exec-once="swww init"
-exec-once="swww img ~/Pictures/Wallpapers/Monochrome/..." # TODO: add a script
+exec-once="~/.config/hypr/scripts/launchWallpaper"
 exec-once="swaync"
 exec-once="waybar"
 exec-once="gammastep"
