update install script

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -370,7 +370,7 @@ exec-once=gnome-keyring-daemon --start
 
 # background services
 exec-once=akonadictl start
-exec-once="~/.config/hypr/scripts/launchWallpaper"
+exec-once=~/.config/hypr/scripts/launchWallpaper
 exec-once="swaync"
 exec-once="waybar"
 exec-once="gammastep"
@@ -387,10 +387,8 @@ exec-once=gammastep-indicator
 exec-once=solaar --window=hide
 
 # clipboard
-#exec-once=wl-paste -t text --watch clipman store
-#exec-once=wl-paste -p -t text --watch clipman store -P --histpath="~/.local/share/clipman-primary.json"
-#exec-once=clipman restore
-exec-once=wl-clipboard-history -t
+#exec-once=wl-clipboard-history -t
+exec-once=wl-paste --watch cliphist store
 
 # autostart my applications
 exec-once=$spotify && hyprctl dispatch movetoworkspacesilent,4,^(spotify)$
