improve swaync styling

--- a/.config/waybar/config.json
+++ b/.config/waybar/config.json
@@ -31,67 +31,59 @@
     // End Seperators
     
     "custom/notification": {
-		    "tooltip": false,
-		    "format": "{icon}",
-		    "format-icons": {
-			      "notification": "<span foreground='white'><sup></sup></span>",
-			      "none": " ",
-			      "dnd-notification": "<span foreground='white'><sup></sup></span>",
-			      "dnd-none": " "
+		"tooltip": false,
+		"format": "{icon}",
+		"format-icons": {
+			"notification": "<span foreground='white'><sup></sup></span>",
+			"none": " ",
+			"dnd-notification": "<span foreground='white'><sup></sup></span>",
+			"dnd-none": " "
 		    },
-		"return-type": "json",
-		"exec-if": "which swaync-client",
-		"exec": "swaync-client -swb",
-		"on-click": "swaync-client -t -sw",
-		"on-click-middle": "swaync-client -d -sw",
-    "on-click-right": "swaync-client -C",
-		"escape": true
+	    "return-type": "json",
+	    "exec-if": "which swaync-client",
+	    "exec": "swaync-client -swb",
+	    "on-click": "swaync-client -t -sw",
+	    "on-click-middle": "swaync-client -d -sw",
+        "on-click-right": "swaync-client -C",
+	    "escape": true
 	},
     
 	"wlr/workspaces": {
 	    "disable-scroll": false,
-		  "all-outputs": true,
-		  "format": "{icon}",
-      "active-only": true,
-		  "persistent_workspaces": {
-			    "1": [],
-			    "2": [],
-			    "3": [],
-			    "4": [],
-			    "5": [],
-			    "6": [],
-			    "7": [],
-			    "8": [],
-			    "9": [],
-			    "10": [],
-          "11": [],
-          "12": []
-		  },
-		  "format-icons": {
-          "1": "I",
-          "2": "II",
-          "3": "III",
-          "4": "IV",
-          "5": "V",
-          "6": "VI",
-          "7": "VII",
-          "8": "VIII",
-          "9": "IX",
-          "10": "X",
-          "11": "XI",
-          "12": "XII"
-     }
+		"all-outputs": true,
+		"format": "{icon}",
+        "active-only": true,
+		"format-icons": {
+            "1": "I",
+            "2": "II",
+            "3": "III",
+            "4": "IV",
+            "5": "V",
+            "6": "VI",
+            "7": "VII",
+            "8": "VIII",
+            "9": "IX",
+            "10": "X",
+            "11": "XI",
+            "12": "XII"
+        }
 	},
 
+    "hyprland/language": {
+        "format": "{}",
+        "format-tr": "TR"
+    },
+
   
-  "keyboard-state": {
-      "numlock": false,
-      "capslock": true,
-      "format": "{name} {icon}",
-      "format-icons": {
-          "locked": " ",
-          "unlocked": " "
-      }
+    "keyboard-state": {
+        "interval": 1,
+        "numlock": false,
+        "capslock": true,
+        "format": "{icon}",
+        "format-icons": {
+            "locked": " ",
+            "unlocked": " "
+        }
   },
   
   "mpd": {
@@ -136,17 +128,16 @@
 
 		
     "clock": { 
-		    "timezone": "Europe/Istanbul", 
-		    "format": "{: %I:%M %p   %d/%m/%Y}",
-        // "format": "  {:%H:%M}  {:%b %d %Y}", 
-		    "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-		    "format-alt": "{: %I:%M %p}",
-    		"today-format": "<span color='#ff6699'><b><u>{}</u></b></span>",
-    		"calendar-weeks-pos": "right",
-    		"format-calendar": "<span color='#ecc6d9'><b>{}</b></span>",
-    		"format-calendar-weeks": "<span color='#99ffdd'><b>W{:%V}</b></span>",
+		"timezone": "Europe/Istanbul", 
+		"format": "{: %I:%M %p   %d/%m/%Y}",
+		"tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
+		"format-alt": "{: %I:%M %p}",
+    	"today-format": "<span color='#ff6699'><b><u>{}</u></b></span>",
+    	"calendar-weeks-pos": "right",
+    	"format-calendar": "<span color='#323437'><b>{}</b></span>",
+    	"format-calendar-weeks": "<span color='#99ffdd'><b>W{:%V}</b></span>",
         "format-calendar-weekdays": "<span color='#ffcc66'><b>{}</b></span>", 
-		    "interval": 10,
+		"interval": 10,
         "on-click-middle": "kalendar" 
      }, 
     "cpu": {
@@ -171,9 +162,9 @@
     },
     "battery": {
         "states": {
-            // "good": 95,
+            "good": 80,
             "warning": 30,
-            "critical": 15
+            "critical": 5
         },
         "format": "{icon}{capacity}%  ",
         "format-charging": " {capacity}%  ",
@@ -187,7 +178,6 @@
         "bat": "BAT2"
     },
     "network": {
-        // "interface": "wlp2*", // (Optional) To force the use of this interface
 		"format-wifi": "  Connected",
 		"format-ethernet": "  Connected",
 		"format-disconnected": "  Disconnected",
@@ -195,12 +185,11 @@
         "tooltip-format": "{ifname} via {gwaddr} ",
         // "tooltip-format-wifi": "",
         "tooltip-format-ethernet": "{ipaddr}  ",
-
         "format-linked": "{ifname} (No IP) ",
         "format-alt": "{ifname}: {ipaddr}/{cidr}"
     },
     "pulseaudio": {
-        // "scroll-step": 1, // %, can be a float
+        "on-click": "pavucontrol",
         "format": "{icon}{volume}%  {format_source}",
         "format-bluetooth": "{icon}{volume}%  {format_source}",
         "format-bluetooth-muted": "{icon}  {format_source}",
@@ -215,14 +204,13 @@
             "portable": "",
             "car": "",
             "default": [" ", " ", " "]
-        },
-        "on-click": "pavucontrol"
+        }
     },
     
     "disk": {
-    	"interval": 180,
+    	"interval": 90,
     	"format": "  {free} (/)",
-	    "tooltip": "{used}/{total} ({percentage_used}%)", 	
+	    "tooltip-format": "{used}/{total} ({percentage_used}%)", 	
     	"path": "/"
     },
     
@@ -253,6 +241,7 @@
     
     "custom/updates":{
         "format": "|   {} Update(s)",
+        "tooltip": "false",
         "exec": "checkupdates | wc -l",
         "exec-if": "[[ $(checkupdates | wc -l) != 0 ]]",
         "interval": 60,
