--- a/.config/swaync/config.json
+++ b/.config/swaync/config.json
@@ -1,21 +1,21 @@
 {
   "$schema": "/etc/xdg/swaync/configSchema.json",
   "positionX": "right",
-  "positionY": "bottom",
-  "control-center-margin-top": 0,
-  "control-center-margin-bottom": 30,
-  "control-center-margin-right": 30,
+  "positionY": "top",
+  "control-center-margin-top": 20,
+  "control-center-margin-bottom": 20,
+  "control-center-margin-right": 20,
   "control-center-margin-left": 0,
   "notification-icon-size": 64,
   "notification-body-image-height": 100,
   "notification-body-image-width": 200,
-  "timeout": 7,
+  "timeout": 10,
   "timeout-low": 5,
   "timeout-critical": 0,
   "fit-to-screen": true,
   "control-center-width": 500,
   "control-center-height": 600,
-  "notification-window-width": 350,
+  "notification-window-width": 500,
   "keyboard-shortcuts": true,
   "image-visibility": "when-available",
   "transition-time": 200,
@@ -33,6 +33,29 @@
       "state": "muted",
       "urgency": "Low",
       "app-name": "Spotify"
+    }
+  },
+  "widgets": [
+    "title",
+    "dnd",
+    "notifications"
+  ],
+  "widget-config": {
+    "title": {
+      "text": "Notifications",
+      "clear-all-button": true,
+      "button-text": "Clear All"
+    },
+    "dnd": {
+      "text": "Do Not Disturb"
+    },
+    "label": {
+      "max-lines": 5,
+      "text": "Label Text"
+    },
+    "mpris": {
+      "image-size": 96,
+      "image-radius": 12
     }
   }
 }
