--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -353,7 +353,7 @@ windowrule=workspace 9 silent,^(Steam)$
 windowrule=workspace 9 silent,title:^(Steam)$
 windowrule=workspace 9 silent,title:^(Friends List)$
 windowrule=workspace 10 silent,krita
-windowrule=workspace 11 silent,^(qbittorrent)$
+windowrule=workspace 11 silent,^(org.qbittorrent.qBittorrent)$
 windowrule=workspace 12 silent,title:^(Nextcloud)$
 windowrule=workspace 12 silent,com.nextcloud.desktopclient.nextcloud
 #movecursortocorner,3
