theme the calendar & improve swaync theme

--- a/.config/waybar/config.json
+++ b/.config/waybar/config.json
@@ -132,11 +132,11 @@
 		"format": "{: %I:%M %p   %d/%m/%Y}",
 		"tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
 		"format-alt": "{: %I:%M %p}",
-    	"today-format": "<span color='#ff6699'><b><u>{}</u></b></span>",
+    	"today-format": "<span color='#aaaaaa'><b><u>{}</u></b></span>",
     	"calendar-weeks-pos": "right",
-    	"format-calendar": "<span color='#323437'><b>{}</b></span>",
-    	"format-calendar-weeks": "<span color='#99ffdd'><b>W{:%V}</b></span>",
-        "format-calendar-weekdays": "<span color='#ffcc66'><b>{}</b></span>", 
+    	"format-calendar": "<span color='#ffffff'><b>{}</b></span>",
+    	"format-calendar-weeks": "<span color='#ffffff'><b>W{:%V}</b></span>",
+        "format-calendar-weekdays": "<span color='#ffffff'><b>{}</b></span>", 
 		"interval": 10,
         "on-click-middle": "kalendar" 
      }, 
